style.css
/* ... */
/* Modal Overlay */

.modal-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

    background: rgba(0, 0, 0, 0.85);

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    opacity: 0;
    pointer-events: none;
    transition: opacity 0.3s ease;

    z-index: 999; /* Makes certain its above all elements */
}

.modal-overlay.active {
    opacity: 1;
    pointer-events: all;
}

.modal-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.modal-image {
    max-width: 80%;
    max-height: 60%;
    border-radius: 10px;
    box-shadow: 0 10px 40px rgba(0,0,0,0.5);
    cursor: pointer;
}

.modal-video {
    max-width: 80%;
    max-height: 60%;
    border-radius: 10px;
    box-shadow: 0 10px 40px rgba(0,0,0,0.5);
    cursor: pointer;
}

/* Modal Likes and Info*/
.modal-info {
    width: 81%; /* hard coded as if at 100% the info container spills beyond the picture */
    flex-direction: row;
    margin-top: 2px;
    display: flex;
    align-items: flex-start;

    background-color: rgba(255,255,255,0.85);
    border: 1px solid black;
    border-radius: 16px;
    padding: 15px;
}

.modal-like-container {
    width: 10%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
    border-right: 1px solid rgba(0,0,0,0.7);
}

.modal-desc-container {
    width: 90%;
    padding-left: 10px;
    display: flex;
    align-items: center;
}

.modal-heart {
    color: red;
    font-size: 18px;
}

.modal-likes {
    font-size: 14px;
}

.modal-likes {
    opacity: 2;
    color: black;
    text-align: left;
}

.modal-caption {
    opacity: 2;
    color: black;
    text-align: left;
}

/* Removing text decoration from modal link - same as navbar */
.modal-link,
.modal-link:visited,
.modal-link:active,
.modal-link:hover {
    text-decoration: none;
    color: black;
}

/* Gallery Disclaimer */
.gallery-disclaimer {
    align-self: center;
    text-align: center;
    width: 100%;
    font-weight: bold;
}

/*                                  Aftercare page only                                  */
/* Stupid aftercare paragraphs thing */
.aftercare-para {
    text-align: center;
    width: 80%;
}

.aftercare-separate {
    text-transform: lowercase;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 10px;
    width: 45%; /* This is for the black bars at the side of it */
    margin: 0 auto;

    font-family: 'Grenze Gotisch', cursive;
    font-size: 28px;
    margin-top: 8px;
    margin-bottom: 8px;
    letter-spacing: 12px;
    text-align: center;
}

.aftercare-separate::before,
.aftercare-separate::after {
    content: "";
    flex: 1;
    height: 1px;
    background-color: black;
}

/* Printing stuff - shortens page*/
@media print {
    body * {
        visibility: hidden;
    }

    .main-title {
        visibility: visible;
    }

    .content-container,
    .content-container * {
        visibility: visible;
    }

    .booking-container {
        width: 50%;
    }

    .content-container {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: none;
        box-shadow: none;
        padding: 20px;
    }

    /* Addings lines in print */
    .page-title::before,
    .page-title::after {
        background-color: black !important;
        height: 2px;
        /* Below makes the lines print on page title */
        -webkit-print-color-adjust: exact;
        print-color-adjust: exact;
    }

    .aftercare-separate::before,
    .aftercare-separate::after {
        background-color: black !important;
        height: 1px;
        /* Below makes the lines print on page title */
        -webkit-print-color-adjust: exact;
        print-color-adjust: exact;
    }


    /* Getting rid of icons when printing */
    .centered-icon {
        visibility: hidden;
    }

    .centered-link {
        visibility: hidden;
    }

    .footer-link {
        visibility: hidden;
    }

    .footer-icon {
        visibility: hidden;
    }
}

/*                                  Booking page only                                  */
/* Booking container */

.booking-container {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.booking-info {
    padding-bottom: 60px;
}

/* Shared Link and Icon Stuff */
.centered-link {
    align-self: center;
    margin-top: 20px;
}

.centered-icon {
    max-width: 50px;
    max-height: 50px;
}

/* IG link at the bottom of each screen */

.footer-icon {
    max-width: 50px;
    max-height: 50px;
    margin-top: 50px
}
/* ... */

